@@ -52,31 +52,26 @@ def pytest_runtest_makereport():
     pytestPDB.item = None
 
 class PdbInvoke:
-    @pytest.mark.tryfirst
-    def pytest_runtest_makereport(self, item, call, __multicall__):
-        rep = __multicall__.execute()
-        if not call.excinfo or \
-            call.excinfo.errisinstance(pytest.skip.Exception) or \
-            call.excinfo.errisinstance(py.std.bdb.BdbQuit):
-            return rep
-        if hasattr(rep, "wasxfail"):
-            return rep
-        return _enter_pdb(item, call.excinfo, rep)
+    def pytest_exception_interact(self, node, call, report):
+        return _enter_pdb(node, call.excinfo, report)
+
+    def pytest_internalerror(self, excrepr, excinfo):
+        for line in str(excrepr).split("\n"):
+            sys.stderr.write("INTERNALERROR> %s\n" %line)
+            sys.stderr.flush()
+        tb = _postmortem_traceback(excinfo)
+        post_mortem(tb)
 
 
-
-
-def _enter_pdb(item, excinfo, rep):
-    # we assume that the above execute() suspended capturing
+def _enter_pdb(node, excinfo, rep):
     # XXX we re-use the TerminalReporter's terminalwriter
     # because this seems to avoid some encoding related troubles
     # for not completely clear reasons.
-    tw = item.config.pluginmanager.getplugin("terminalreporter")._tw
+    tw = node.config.pluginmanager.getplugin("terminalreporter")._tw
     tw.line()
     tw.sep(">", "traceback")
     rep.toterminal(tw)
     tw.sep(">", "entering PDB")
-
     tb = _postmortem_traceback(excinfo)
     post_mortem(tb)
     rep._pdbshown = True
